--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,6 @@
 NODE_ENV=dev
 PRODUCTION=false
-PORT=3000
+SERVER_PORT=3000
+CLIENT_PORT=4200
 PROD_DATABASE_URL=mongodb+srv://username:password@domain.com/myDb?retryWrites=true&w=majority
 DEV_DATABASE_URL=mongodb://localhost:27017/myDb
